--- a/pages/street-fighter.html
+++ b/pages/street-fighter.html
@@ -16,59 +16,59 @@
         <link href="https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap" rel="stylesheet">
 
     </head>
-    
-    <!--NAV BAR -->
-    <header>
-        <nav class="navbar navbar-dark bg-dark fixed-top">
-            <div class="container-fluid">
-            <a class="navbar-brand" href="#">Toneo Gamer
-            </a>
-            <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
-                <span class="navbar-toggler-icon"></span>
-            </button>
-            <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
-                <div class="offcanvas-header">
-                <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Torneo Gamer</h5>
-                <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-                </div>
-                <div class="offcanvas-body">
-                <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
-                    <li class="nav-item">
-                    <a class="nav-link" href="../index.html">Inicio</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="../index.html #reglas">Espiritu Deportivo</a>
-                    </li>
-                    <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
-                        Inscripciones
-                    </a>
-                        <ul class="dropdown-menu dropdown-menu-dark">
-                            <li><a class="dropdown-item" href="../pages/league-of-legends.html">League of Legends</a></li>
-                            <li><a class="dropdown-item" href="../pages/pubg.html">PUBG</a></li>
-                            <li><a class="dropdown-item" href="../pages/street-fighter.html">Street Fighter</a></li>
-                            <li><a class="dropdown-item" href="../pages/hearthstone.html">HearthStone</a></li>
-                        </ul>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#premios">Premios</a>
-                    </li>
-                    <li class="nav-item">
-                    <a class="nav-link" href="#nosotros">Nosotros</a>
-                    </li>
-                </ul>
-                <form class="d-flex" role="search">
-                    <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
-                    <button class="btn btn-success" type="submit">Buscar</button>
-                </form>
-                </div>
-            </div>
-            </div>
-        </nav>
-    </header>
 
-    <!-- Menu de Inscriocion -->>
     <body class="body__SF">
+        <!--NAV BAR -->
+        <header>
+            <nav class="navbar navbar-dark bg-dark fixed-top">
+                <div class="container-fluid">
+                <a class="navbar-brand" href="#">Toneo Gamer
+                </a>
+                <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasDarkNavbar" aria-controls="offcanvasDarkNavbar">
+                    <span class="navbar-toggler-icon"></span>
+                </button>
+                <div class="offcanvas offcanvas-end text-bg-dark" tabindex="-1" id="offcanvasDarkNavbar" aria-labelledby="offcanvasDarkNavbarLabel">
+                    <div class="offcanvas-header">
+                    <h5 class="offcanvas-title" id="offcanvasDarkNavbarLabel">Torneo Gamer</h5>
+                    <button type="button" class="btn-close btn-close-white" data-bs-dismiss="offcanvas" aria-label="Close"></button>
+                    </div>
+                    <div class="offcanvas-body">
+                    <ul class="navbar-nav justify-content-end flex-grow-1 pe-3">
+                        <li class="nav-item">
+                        <a class="nav-link" href="../index.html">Inicio</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="../index.html #reglas">Espiritu Deportivo</a>
+                        </li>
+                        <li class="nav-item dropdown">
+                        <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+                            Inscripciones
+                        </a>
+                            <ul class="dropdown-menu dropdown-menu-dark">
+                                <li><a class="dropdown-item" href="../pages/league-of-legends.html">League of Legends</a></li>
+                                <li><a class="dropdown-item" href="../pages/pubg.html">PUBG</a></li>
+                                <li><a class="dropdown-item" href="../pages/street-fighter.html">Street Fighter</a></li>
+                                <li><a class="dropdown-item" href="../pages/hearthstone.html">HearthStone</a></li>
+                            </ul>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#premios">Premios</a>
+                        </li>
+                        <li class="nav-item">
+                        <a class="nav-link" href="#nosotros">Nosotros</a>
+                        </li>
+                    </ul>
+                    <form class="d-flex" role="search">
+                        <input class="form-control me-2" type="search" placeholder="Search" aria-label="Search">
+                        <button class="btn btn-success" type="submit">Buscar</button>
+                    </form>
+                    </div>
+                </div>
+                </div>
+            </nav>
+        </header>
+
+        <!-- Menu de Inscriocion -->
         <Section class="registro__SF">
             <h4>Inscripción</h4>
             <input class="ingreso__SF" type="text" name="nombres" id="nombre" placeholder="Nombre completo">
@@ -79,9 +79,10 @@
             <input class="boton__SF" type="submit" value="Registrar">
             <p><a href="#">¿Ya tengo Cuenta?</a></p>
         </Section>
-    </body>
 
-    <!-- JavaScript Bundle with Popper (Bootsrap 5) -->
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+        <!-- JavaScript Bundle with Popper (Bootsrap 5) -->
+        <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js" integrity="sha384-A3rJD856KowSb7dwlZdYEkO39Gagi7vIsF0jrRAoQmDKKtQBHUuLZ9AsSv4jD4Xa" crossorigin="anonymous"></script>
+    
+    </body>
 
 </html>
