Septima Modificaciones Desarrollo WEB

--- a/index.html
+++ b/index.html
@@ -49,10 +49,10 @@
                             Inscripciones
                         </a>
                             <ul class="dropdown-menu dropdown-menu-dark">
-                                <li><a class="dropdown-item" href="#lol">League of Legends</a></li>
-                                <li><a class="dropdown-item" href="#pubg">PUBG</a></li>
-                                <li><a class="dropdown-item" href="#sf">Street Fighter</a></li>
-                                <li><a class="dropdown-item" href="#hs">HearthStone</a></li>
+                                <li><a class="dropdown-item" href="./pages/league-of-legends.html">League of Legends</a></li>
+                                <li><a class="dropdown-item" href="./pages/pubg.html">PUBG</a></li>
+                                <li><a class="dropdown-item" href="./pages/Street-Fighter.html">Street Fighter</a></li>
+                                <li><a class="dropdown-item" href="./pages/hearthsto">HearthStone</a></li>
                             </ul>
                         </li>
                         <li class="nav-item">
@@ -83,10 +83,12 @@
 
         <nav id="inscripcion" class="contenedor__color">
             <h2 class="titulos__blancos">Inscripción</h2>
-            <a id="lol" class="contenedor__inscripciones" href="./pages/league-of-legends.html"><img src="./imagen/inscripcion_lol.jpg"></a>
-            <a id="pubg" class="contenedor__inscripciones" href="./pages/pubg.html"><img src="./imagen/inscripcion_pubg.png"></a>
-            <a id="sf" class="contenedor__inscripciones" href="./pages/Street-Fighter.html"><img src="./imagen/inscripciones_sf.webp"></a>
-            <a id="hs" class="contenedor__inscripciones" href="./pages/hearthstone.html"><img src="./imagen/inscripcion_hs.jpg"></a>
+            <div class="contenedor__imangen__inscripciones">
+                <a class="contenedor__inscripciones" href="./pages/league-of-legends.html"><img src="./imagen/inscripcion_lol.jpg"></a>
+                <a class="contenedor__inscripciones" href="./pages/pubg.html"><img src="./imagen/inscripcion_pubg.png"></a>
+                <a class="contenedor__inscripciones" href="./pages/Street-Fighter.html"><img src="./imagen/inscripciones_sf.webp"></a>
+                <a class="contenedor__inscripciones" href="./pages/hearthstone.html"><img src="./imagen/inscripcion_hs.jpg"></a>
+            </div>
         </nav>
         
         <section id="premios" class="contenedor__general">
