--- a/pages/hearthstone.html
+++ b/pages/hearthstone.html
@@ -8,7 +8,7 @@
         <title>HearthStone</title>
 
         <!-- Hoja de estilo-->
-        <link rel="stylesheet" href="../style/style.css">
+        <link rel="stylesheet" href="../style/sass/style.css">
 
         <!-- CSS only (Bootsrap 5) -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
