--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
         <title>Torneo</title>
 
         <!-- Hojas de estilo  -->
-        <link rel="stylesheet" href="./style/style.css">
+        <link rel="stylesheet" href="./style/sass/style.css">
 
         <!-- CSS only (Bootsrap 5) -->
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-gH2yIJqKdNHPEq0n4Mqa/HGKIhSkIHeL5AyhkYV8i59U5AR6csBvApHHNl/vI1Bx" crossorigin="anonymous">
@@ -137,10 +137,8 @@
         </section>
 
         <section id="nosotros" class="contenedor__color">
-            <div class="contenedor__nosotros">
-                <h2 class="titulos__blancos">Nosotros</h2>
-                <p class="contenedor__texto__color">Somos una de las principales empresas organizadoras de torneos de videos juegos en países de habla hispana. Desde el inicio nuestra ilusión ha sido impulsae el crecimiento de los esports y ofrecer las mejores competenciones a los jugadores. Ya hemos organizo miles de torneos y más de millón de jugadores que forman parte de nuestra comunidad. Nuestro objetivo es que los jugadores se emocionenen competiendo a sus juegos favoritos y que tengan la posibilidad de vivir de los esports.</p>
-            </div>
+            <h2 class="titulos__blancos">Nosotros</h2>
+            <p class="contenedor__texto__color">Somos una de las principales empresas organizadoras de torneos de videos juegos en países de habla hispana. Desde el inicio nuestra ilusión ha sido impulsae el crecimiento de los esports y ofrecer las mejores competenciones a los jugadores. Ya hemos organizo miles de torneos y más de millón de jugadores que forman parte de nuestra comunidad. Nuestro objetivo es que los jugadores se emocionenen competiendo a sus juegos favoritos y que tengan la posibilidad de vivir de los esports.</p>
         </section>
 
         <footer class="contenedor__color">
